--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -18,6 +18,7 @@
     "update": "^0.7.4"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "set-value": ">=2.0.1"
   }
 }
