--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "José Alberto, Jethran Enrique y Ulises",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.2.2",
     "mongoose": "^5.7.1",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.0",
+    "supertest": "^4.0.2",
     "update": "^0.7.4"
   },
   "devDependencies": {
