--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -5,26 +5,29 @@
   "main": "app.js",
   "scripts": {
     "test": "node src/app.js & mocha",
+    "linter": "jshint src",
+    "lint": "jshint --reporter node_modules/jshint-html-reporter/reporter.js src > report.html",
     "start": "node src/app.js"
   },
-  "author": "José Alberto, Jethran Enrique y Ulises",
+  "author": "José Alberto, Jethran Enrique",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^6.2.2",
     "mongoose": "^5.7.1",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.0",
-    "supertest": "^4.0.2",
     "update": "^0.7.4"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "jshint": "^2.10.3",
+    "mocha": "^6.2.2",
     "nodemon": "^1.19.3",
-    "set-value": ">=2.0.1"
+    "set-value": ">=2.0.1",
+    "supertest": "^4.0.2"
   }
 }
