--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.0",
+    "path": "^0.12.7",
     "update": "^0.7.4"
   },
   "devDependencies": {
