--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.0",
